# testcase

./: CMakeLists.txt  README.md
TestCase/: CMakeLists.txt
TestCase/include/: calculate.h
TestCase/libs/: calculate.cpp  tempCodeRunnerFile.cpp
TestCase/tests/: test_calculate.cpp
include/: calculate.h
libs/: calculate.cpp
tests/: test_calculate.cpp
